--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ android {
     buildFeatures{
         viewBinding true
     }
+
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
